<resources>
    <string name="app_name">vi_db</string>
    <string name="permission_required">Требуется разрешение на использование микрофона</string>
    <string name="start_service_before">OFF</string>
    <string name="stop_service_after">ON</string>

    <string name="voice_recognizer_is_active">Распознавание голоса активно…</string>
    <string name="allow">ДОБАВИТЬ В АВТОЗАПУСК</string>
    <string name="enable_autostart">Включите автозапуск для службы голосового помощника</string>
    <string name="ask_permission">Для корректной работы приложения требуется работа службы голосового помощника в фоновом режиме</string>
    <string name="my_service_name">com.qavan.voice_inspector.service</string>


    <string name="CARD_INDICATOR_HINT">Предыдущее показание 0 от 01.01.1970</string>
    <string name="CARD_RECORD_BUTTON">записать</string>
    <string name="CARD_TITLE">голосовой прием показаний</string>
    <string name="CARD_ELECTRICITY">Электроэнергия</string>
    <string name="CARD_HOT_WATER">Горячее водоснабжение</string>
    <string name="CARD_COLD_WATER">Холодное водоснабжение</string>
    <string name="CARD_ID">Лицевой счёт</string>
    <string name="CARD_INDICATOR_ID">Номер счетчика</string>
    <string name="CARD_ID_PLACEHOLDER">00000 000000</string>
    <string name="CARD_INDICATOR_ID_PLACEHOLDER">000000000000</string>

    <string name="CARD_VIEW_CONTROL_ON">SMALL</string>
    <string name="CARD_VIEW_CONTROL_OFF">LARGE</string>

    <string name="ROUT_CARD_STATUS_PROCESS">взято в работу</string>
    <string name="ROUT_CARD_TITLE_PLACEHOLDER">Прием показаний от 01.01.1970</string>
    <string name="ROUT_CARD_ADDRESS_PLACEHOLDER_FULL">Тут должен быть адрес в две строки, просто верь этой надписи.\nМолодец, поверил!)</string>
    <string name="ROUT_CARD_DATE_PLACEHOLDER">До 01.01.1970</string>
    <string name="ROUT_CARD_PERSON_PLACEHOLDER">Клиент</string>
    <string name="ROUT_CARD_STATUS_WAIT">Ожидает выполнения</string>
    <string name="ROUT_CARD_STATUS_DEAD">Отменен</string>
    <string name="ROUT_TITLE">Маршрутный лист</string>


    <string name="KEY_WORD_ACTIVATION">старт</string>
    <string name="KEY_WORD_DEACTIVATION">стоп</string>
</resources>
