<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/routeLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8F0F7"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/textViewTitleLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:gravity="bottom|center_vertical"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:gravity="start"
            android:paddingStart="18dp"
            android:paddingEnd="0dp"
            android:text="@string/ROUT_TITLE"
            android:textAlignment="gravity"
            android:textAllCaps="true"
            android:textColor="@color/colorBlackPrimaryNotSoLightOP50"
            android:textDirection="inherit"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ToggleButton
            android:id="@+id/idCheckBoxService"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:text="@string/start_service_before"
            android:textColor="@color/colorBlackPrimary"
            android:textOff="@string/start_service_before"
            android:textOn="@string/stop_service_after"
            android:textSize="12sp" />

        <ToggleButton
            android:id="@+id/idCheckBoxViewControl"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/CARD_VIEW_CONTROL_OFF"
            android:textColor="@color/colorBlackPrimary"
            android:textOff="@string/CARD_VIEW_CONTROL_OFF"
            android:textOn="@string/CARD_VIEW_CONTROL_ON"
            android:textSize="12sp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        tools:itemCount="1"
        tools:listitem="@layout/list_item" />

</LinearLayout>